--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,11 @@
-/* import Google fonts link --  'Spinnaker', sans-serif;  */
+/* Import Google fonts link --  Spinnaker, sans-serif  */
 @import url('https://fonts.googleapis.com/css2?family=Spinnaker&display=swap');
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Spinnaker', sans-serif;
+}
+.card .back-view img {
+    max-width: 45px;
 }
