--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,12 @@
     box-sizing: border-box;
     font-family: 'Spinnaker', sans-serif;
 }
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
 .card .back-view img {
     max-width: 45px;
 }
