--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,22 @@
 /* Import Google fonts link --  Spinnaker, sans-serif  */
 @import url('https://fonts.googleapis.com/css2?family=Spinnaker&display=swap');
-*{
+
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Spinnaker', sans-serif;
 }
-body{
+
+body {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 100vh;
+    background: #dfce35b2;
 
 }
+
 .card .back-view img {
     max-width: 45px;
 }
