--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,44 +19,62 @@ body {
 
 .wrapper {
     height: 400px;
-    width:  400px;
+    width: 400px;
     padding: 25px;
     background: #f8f8f8f8;
     border-radius: 10px;
 }
-.cards , .card , .view {
+
+.cards,
+.card,
+.view {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.cards{
+
+.cards {
     height: 100%;
-    width:100%;
+    width: 100%;
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
 .cards .card {
-    cursor:pointer;
+    cursor: pointer;
     position: relative;
-    height: calc(100% / 4 - 10px) ;
+    perspective: 800px;
+    transform-style: preserve-3d;
+    height: calc(100% / 4 - 10px);
     width: calc(100% / 4 - 10px);
 }
-.cards .card  .view {
+
+.cards .card .view {
     height: 100%;
-    width:100%;
+    width: 100%;
     position: absolute;
     background: #f8f8f8;
     border-radius: 8px;
-    box-shadow: 0 3px 10px rgba(0,0, 0, 0.1);
+    backface-visibility: hidden;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.25s linear;
 
 }
-.card .front-view span{
+
+.card .front-view span {
     font-size: 30px;
 }
+
 .card .back-view {
     transform: rotateY(-180deg);
 }
-
 .card .back-view img {
     max-width: 45px;
+}
+.card .front-view {
+    transform: rotateY(180deg);
+}
+
+.card:hover .back-view {
+    transform: rotateY(0);
 }
